<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go Wild</string>
    <string name="prepare_for_the_adventure_of_a_lifetime">Prepare for the adventure of a lifetime!</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="or">OR</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="password">Password</string>
    <string name="term_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="by_logging_in_you_agree_to_out">By logging in, you agree to our</string>
    <string name="forgot_password">Forgot password</string>
    <string name="pwd_hint">****************</string>
    <string name="myemail_gowild_com">myemail@gowild.com</string>
    <string name="sign_up">Sign Up</string>
    <string name="e_waiver">E-WAIVER</string>
    <string name="register">REGISTER</string>
    <string name="full_name">Full name</string>
    <string name="jennylyn_artecona">Jennylyn Artecona</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="_123_street_name_city">123 Street Name, City</string>
    <string name="do_you_have_already_account">Do you have already account?</string>
    <string name="didn_t_recieve_code">Didn’t recieve code?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="enter_your_email_id_or_phone_number_associated_with_your_account_and_we_ll_send_an_verification_code_for_reset_your_password">Enter your email ID or phone number associated with your account and we’ll send an verification code for reset your password</string>
    <string name="verify_account">Verify account</string>
    <string name="verify_code">Verify Code</string>
    <string name="create_new_password">Create new password</string>
    <string name="your_password_must_be_different_from_previous_used_password">Your password must be different from previous used password.</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_venenatis_volutpat_risus_vitae_iaculis_duis_laoreet_molestie_efficitur_aenean_arcu_velit_vestibulum_a_libero_vel_sollicitudin_posuere_dui">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed venenatis volutpat risus vitae iaculis. Duis laoreet molestie efficitur. Aenean arcu velit, vestibulum a libero vel, sollicitudin posuere dui. lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_venenatis_volutpat_risus_vitae_iaculis_duis_laoreet_molestie_efficitur_aenean_arcu_velit_vestibulum_a_libero_vel_sollicitudin_posuere_dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed venenatis volutpat risus vitae iaculis. Duis laoreet molestie efficitur. Aenean arcu velit, vestibulum a libero vel, sollicitudin posuere dui. </string>
    <string name="i_agree_with_local_laws_and_terms">I agree with local laws and terms</string>
    <string name="i_agree">I Agree</string>
    <string name="reset_npassword">Reset\nPassword</string>
    <string name="search_for_trail_or_activity">Search for trail or activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="routes">Routes</string>
    <string name="settings">settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="messages">Messages</string>
    <string name="my_races">My Races</string>
    <string name="support">Support</string>
    <string name="my_achievements">My Achievements</string>
    <string name="payment">Payment</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="jennylyn">Jennylyn</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="artecona">Artecona</string>
    <string name="jarts123">jarts123</string>
    <string name="jarts129_gmail">jarts129@gmail.com</string>
    <string name="type_here">Type here</string>
    <string name="save">Save</string>
    <string name="route_1">Route 1</string>
    <string name="route_2">Route 2</string>
    <string name="route_3">Route 3</string>
    <string name="route_7">Route 7</string>
    <string name="date">Nov 2nd</string>
    <string name="benjamin_poole">Benjamin Poole</string>
    <string name="support_title">1235CA2B2 1235CA2B2 1235CA2B2 1235CA2B2 1235CA2B21235CA2B2</string>
    <string name="date_time">March 22, 2021 | 9:00am</string>
    <string name="completed">Completed</string>
    <string name="send_new_ticket">Send New Ticket</string>
    <string name="how_can_we_help_you">How can we help you</string>
    <string name="subject">Subject</string>
    <string name="your_message">Your Message</string>
    <string name="attach_images_or_proof">Attach images or proof</string>
    <string name="send_message">Send Message</string>
    <string name="write_subject_here">Write subject here</string>
    <string name="nearby_adventures">Nearby Adventures</string>
    <string name="go_wild_feed">go wild feed</string>
    <string name="my_feed">My Feed</string>
    <string name="my_friends">My Friends</string>
    <string name="post">Post</string>
    <string name="minutes_age">30 minutes ago</string>
    <string name="more">...more</string>
    <string name="thrill_seekers_attractions_in_houston">Thrill Seekers Attractions in Houston</string>
    <string name="likes">+8 likes</string>
    <string name="amber_J_Santiago">Amber J Santiago</string>
    <string name="katherine_P_Flournoy">Katherine P Flournoy</string>
    <string name="what_would_you_like_to_tell_us">What would you like to tell us?</string>
    <string name="your_activity_for_today">Your Activity For Today</string>
    <string name="description">Hi @johnsmith, when you have time please take a look at the new location we have shared. </string>
    <string name="required_field">Required Field!</string>
    <string name="password_must_more_then_6">Password should be of minimum 6 characters</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="please_enter_full_name">Please Enter Full Name</string>
    <string name="entered_name_is_too_long">Entered name is too long!</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="password_not_matched">Password not Matched</string>
    <string name="alert">Alert</string>
    <string name="ok">Ok</string>
    <string name="profile">Profile</string>
    <string name="about_me">About Me</string>
    <string name="selfie_verification">Selfie Verification</string>
    <string name="visit">Visit</string>
    <string name="_75k">75k</string>
    <string name="_100_000_miles">10000 Miles</string>
    <string name="my_company">My Company</string>
    <string name="sponsored">Sponsored</string>
    <string name="time">9:00AM</string>
    <string name="formated_date">10/20/2020</string>
    <string name="total_count">+200</string>
    <string name="registered">Registered</string>
    <string name="how_many_left">70/200 Left</string>
    <string name="suggested_routes">Suggested Routes</string>
    <string name="route_text_goes_here">Route1 Text Goes Here</string>
    <string name="try_route">Try Route</string>
    <string name="details">Details</string>
    <string name="map">Map</string>
    <string name="treasure_wild">TREASURE\nwild </string>
    <string name="run_wild">Map\nWild </string>
    <string name="my_trails">my\nTrails </string>
    <string name="dummy_fragment">dummy fragment</string>
    <string name="name_treasure_wild">TREASURE wild</string>
    <string name="upcoming">Upcoming</string>
    <string name="on_going">On Going</string>
    <string name="my_company_treasure_hunt">my company\'s treasure hunt</string>
    <string name="not_registered">NOT REGISTERED</string>
    <string name="my_company_s_treasure_hunt">My company’s treasure hunt</string>
    <string name="date_new">15 sept, 2021</string>
    <string name="registration">Registration</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="front_id">Front ID</string>
    <string name="back_id">Back ID</string>
    <string name="submit">Submit</string>
    <string name="verification_code_sent_to">Verification code sent to</string>
    <string name="state_country_postal_code">State, Country , Postal Code</string>
    <string name="waiting_for_approval">WAITING FOR APROVAL</string>
    <string name="start">START</string>
    <string name="registration_number">Registration Number</string>
    <string name="information_from_your_registration">Information from your registration</string>
    <string name="resend_registration_number"><u>Resend Registration Number</u></string>
    <string name="download_this_event_map">Download this event map</string>
    <string name="friend_request">Friend request</string>
    <string name="suggested_friend">Suggested Friend</string>
    <string name="miranda">Miranda</string>
    <string name="run_wild_title">map wild</string>
    <string name="route_1_text_goes_here">Route 1 text goes here</string>
    <string name="route1_text_goes_here_new">Route1 Text Goes Here</string>
    <string name="distance">Distance</string>
    <string name="elevation_gain">Elevation Gain</string>
    <string name="moving_time">Moving Time</string>
    <string name="max_elevation">Max Elevation</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="avg_speed">Avg Speed</string>
    <string name="leaderboard">leaderboard</string>
    <string name="nicolas_norman">Nicolas Norman</string>
    <string name="congratulations_you_are_8th_place_on_this_route">congratulations\nyou are 8th place on this route</string>
    <string name="minutes_time">00:50:30</string>
    <string name="school_district_82">School District 82</string>
    <string name="to">to</string>
    <string name="alexander_ave">Alexander Ave.</string>
    <string name="mathew_platform">(St. Mathew Platform)</string>
    <string name="coast_mountains">(Coast Mountains)</string>
    <string name="by_creating_an_account_you_agree_to_our">By creating an account, you agree to our</string>
    <string name="trails">my Trails</string>
    <string name="save_routes">Save Routes</string>
    <string name="created_route">Created Route</string>
    <string name="new_route">new route</string>
    <string name="route_name">Route Name</string>
    <string name="starting_point">Starting Point</string>
    <string name="end_point">End Point</string>
    <string name="todo">TODO</string>
    <string name="facebook_app_id">1760191937693875</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">f394b29eca16a5e90c3f3a36d243b9c4</string>
    <string name="enter_first_name">Enter firstname</string>
    <string name="enter_lastname">Enter lastname</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email</string>
    <string name="client_id">321129921779-3sb8q9ne6viisl5itofl6g8bim6j8bio.apps.googleusercontent.com</string>
    <string name="write_subjects_here">Write subject here...</string>
    <string name="muhammad_bilal">Muhammad Bilal 🙌</string>
    <string name="emoji_hands">🙌</string>
</resources>